[gd_scene load_steps=2 format=2]

[ext_resource path="res://SalesDemoFile.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="lblInformation" type="Label" parent="."]
margin_left = 35.0
margin_top = 42.0
margin_right = 184.0
margin_bottom = 188.0
text = "placeholder debug"

[node name="lblDebugHP" type="Label" parent="."]
margin_left = 366.0
margin_top = 47.0
margin_right = 524.0
margin_bottom = 114.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Demo Label Sale"
align = 1
valign = 1

[node name="btnQ" type="Button" parent="."]
margin_left = 13.0
margin_top = 246.0
margin_right = 246.0
margin_bottom = 305.0
text = "Q"

[node name="btnW" type="Button" parent="."]
margin_left = 325.0
margin_top = 245.0
margin_right = 554.0
margin_bottom = 304.0
text = "W"

[node name="btnE" type="Button" parent="."]
margin_left = 625.0
margin_top = 244.0
margin_right = 841.0
margin_bottom = 303.0
text = "E"

[node name="btnR" type="Button" parent="."]
margin_left = 16.0
margin_top = 344.0
margin_right = 249.0
margin_bottom = 403.0
text = "R"

[node name="btnT" type="Button" parent="."]
margin_left = 325.0
margin_top = 344.0
margin_right = 553.0
margin_bottom = 403.0
text = "T"

[node name="btnY" type="Button" parent="."]
margin_left = 619.0
margin_top = 341.0
margin_right = 840.0
margin_bottom = 400.0
text = "Y"
[connection signal="pressed" from="btnQ" to="." method="_on_btnQ_pressed"]
[connection signal="pressed" from="btnW" to="." method="_on_btnW_pressed"]
[connection signal="pressed" from="btnE" to="." method="_on_btnE_pressed"]
[connection signal="pressed" from="btnR" to="." method="_on_btnR_pressed"]
[connection signal="pressed" from="btnT" to="." method="_on_btnT_pressed"]
[connection signal="pressed" from="btnY" to="." method="_on_btnY_pressed"]
